cleanup fix for non-default trailer loc

--- a/Config/trailers.example.conf
+++ b/Config/trailers.example.conf
@@ -3,6 +3,7 @@
 TMDB_API_Key = replaceMeWithYourApiKey
 
 # Youtube-dl variables
+# Decrease playlistEndVar to download less trailers
 youtubePlaylist = https://www.youtube.com/playlist?list=PLScC8g4bqD47c-qHlsfhGH3j6Bg7jzFy-
 playlistEndVar = 400
 
@@ -22,7 +23,6 @@ redBand = False
 
 # Trailer Location
 # Leave blank to store in the Trailers Directory within the Directory this script is running in
-# Turn off cleanup if moving trailers to a different location
 TrailerLocation =
 
 # Number of days to keep cache
